# 42

./: .gitignore  README.md  REVIEW.md  a.out  example.md  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_strdup.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strrchr.c  ft_strtrim.c
milestone_00/libft/: Makefile  README.md  a.out  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isascii.c  ft_isprint.c  ft_lstmap.c  ft_memcpy.c  ft_putstr_fd.c  ft_strchr.c  ft_striteri.c  ft_tolower.c
milestone_00/libft_2/: ft_atoi.c  ft_isalpha.c  ft_isdigit.c  ft_lstadd_front.c  ft_memchr.c  ft_memcmp.c  ft_strncmp.c  ft_strnstr.c  ft_strtrim.c  ft_toupper.c
milestone_01/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c  lorem.txt  output1.txt  output2.txt  output4.txt  output5.txt  output6.txt  test.txt  test4.txt
milestone_01/printf/: Makefile  README.md  content.md  ft_printf.c  ft_printf.h  utils.c
milestone_01/push_swap/: Makefile  README.md
milestone_01/push_swap/include/: push_swap.h  utils.h
milestone_01/push_swap/libft/: Makefile  ft_atoi.c  ft_atol.c  (+52 more)
milestone_02/python_module_06/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
milestone_02/python_module_07/: battle.py  capacitor.py  tournament.py
milestone_02/python_module_08/ex1/: loading.py  pyproject.toml  requirements.txt
(+94 files in other folders)
